--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,26 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
+  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 1rem;
+  color: white;
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
+button {
+  display: inline-block;
+  border: 1px solid #fff;
+  margin: 0 2px;
+  padding: 10px 15px;
+  border-radius: 5px;
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.7);
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+button.selected {
+  background-color: #fff;
+  color: #282c34;
 }
